reword OT slightly, getting it shorter and with less paragraph breaks

--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -37,22 +37,17 @@ right  = 1in]{geometry}
 \begin{flushleft}
 \textbf{Platform Engineer}\\
 \textit{Ocado Technology, February 2017 to present}\\[5pt]
-I currently work on the Ocado Technology developer platform, which consists of a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. 
+Responsible for the Ocado Technology developer platform, a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. Development work involved producing and and improved continuous integration and delivery scripts written in Python running in GitlabCI, in particular refactoring our bash scripts which interact with Kubernetes, OpenStack and Ceph APIs into Python due to rising complexity. Implemented and emphasised the need for a test driven approach to deployment process scripts to improve feedback loops whilst avoiding interfering with developer workflows, wrote clear but concise documentation to compliment this process. Dog-fooded the approach during this time having maintained automation applications which use the CI/CD pipeline and having deployed using previous deployment methods.
 
 
-\paragraph{}During this time I have produced and and improved continuous integration and delivery scripts written in Python running in GitlabCI - highlights include refactoring our bash scripts which interact with Kubernetes, OpenStack and Ceph APIs into Python due to rising complexity, implementing and emphasising the need for a test driven approach to deployment process scripts to improve feedback loops whilst avoiding interfering with developer workflows, and writing clear but concise documentation to compliment this process. I have heavily leant on a dog fooding approach during this time having maintained our own automation applications which use the CI/CD pipeline and having deployed using previous deployment methods.
+\paragraph{}Operational duties included supporting developers in debugging issues with their applications, which varied from detecting and resolving issues with the cluster to providing advice as to why their configurations were incorrect or broken. Promoted a culture of learning through written case studies which clearly show the thinking behind the problem resolution and the commands ran, and through pairing during incidents. I am part of a 24/7 support rota where we support the clusters plus an ELK stack, JIRA, Crucible, GitlabCI and a variety of other developer tools. 
 
 
-\paragraph{}Another area I spend a lot of time on is support developers in debugging issues with the cluster. I enjoy debugging and problem solving distributed systems and have been an advocate of finding ways to share the learning with others, predominantly through documentation improvements but also through pairing on problems. I frequently get users coming to me directly (by tagging me on the appropriate knowledge sharing slack channel) due to my approachable manner and communication style - when debugging a user problem I tend to give verbose explanations of what I'm doing and what the probable causes of problems are, so that developers can learn how to provide us with more information in the future in order to reach a resolution faster. Where issues are down to configuration problems I communicate clearly what they're doing wrong, with documentation links to back up what I'm explaining. I am part of a 24/7 support rota where we support the clusters plus an ELK stack, JIRA, Crucible, GitlabCI and a variety of other developer tools. 
+\paragraph{}I have been a key member in the Monitoring and Alerting working group for the infrastructure department which aims to have a more coordinated approach to monitoring across several teams. Facilitated and organised meetings, offered my own technical experience and advice on effective use of Prometheus, Grafana and Kubernetes, organised lab days to get people motivated and focussed on completing the technical work required to bring their team up to speed. 
 
+\paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Pushed for a culture of continuous learning within my department through info-dump sessions for multiple where we discuss a specific technical topic in a question and answer format.
 
-\paragraph{}I have been a key member in the Monitoring and Alerting working group for the infrastructure department which aims to have a more coordinated approach to monitoring across several teams. During this time I have helped facilitate meetings, kept people to an agenda whilst offering my own and my team's technical experience and advice on effective use of Prometheus, Grafana and Kubernetes. In order to continue this advice outside of these meetings I have organised lab days to get people working on improving monitoring tasks together, where I can provide advice at the time people are working on the issues and get people to focus and make progress toward a better approach to monitoring.
-
-\paragraph{}I have done a lot of technical interviews for my team during this time, and am constantly looking to make the process less stressful for the candidate. I have spent time researching different approaches to this and gathered my team to discuss what they think the key problems in our approach are which has lead to us deciding to use different strategies in content - at the moment we are moving from using whiteboard coding which yielded a lot of stress for limited understanding of how candidates work to pair programming which I believe will make the process feel more collaborative and about how the person thinks, rather than how well they write code in high pressure situations.
-
-\paragraph{} I am always on the look out for opportunities to publicly present my work at meetups, conferences and for internal training sessions. I enjoy public speaking and love to share my story and experience with technology and hear from others in order to figure out what is the best, or close to the best approach to different problems. 
-
-\paragraph{}In addition to these responsibilities I have pushed for a culture of continuous learning within my department through info-dump sessions for the entire department where we discuss a specific technical topic in a question and answer format.\\[10pt]
+\paragraph{} Publicly presented my work at meetups, conferences and for internal training sessions. I enjoy public speaking and love to share my story and experience with technology and hear from others in order to figure out what is the best, or close to the best approach to different problems.\\[10pt]
 
 \textbf{Software Engineer}\\
 \textit{Cambridge Consultants, September 2015 to February 2017}\\[5pt]
