squished recruitment + public speaking together, ick.

--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -37,16 +37,14 @@ right  = 1in]{geometry}
 \begin{flushleft}
 \textbf{Platform Engineer}\\
 \textit{Ocado Technology, February 2017 to present}\\[5pt]
-Responsible for the Ocado Technology developer platform, a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. Development work involved producing and and improved continuous integration and delivery scripts written in Python running in GitlabCI, in particular refactoring our bash scripts which interact with Kubernetes, OpenStack and Ceph APIs into Python due to rising complexity. Implemented and emphasised the need for a test driven approach to deployment process scripts to improve feedback loops whilst avoiding interfering with developer workflows, wrote clear but concise documentation to compliment this process. Dog-fooded the approach during this time having maintained automation applications which use the CI/CD pipeline and having deployed using previous deployment methods.
+Responsible for the Ocado Technology developer platform, a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. Development work involved producing and improving continuous integration and delivery scripts written in Python running in GitlabCI, in particular refactoring our bash scripts which interact with Kubernetes, OpenStack and Ceph APIs into Python due to rising complexity. Implemented and emphasised the need for a test driven approach to deployment process scripts to improve feedback loops whilst avoiding interfering with developer workflows, wrote clear but concise documentation to compliment this process. Dog-fooded the approach during this time having maintained and improved Django applications which use the CI/CD pipeline and having deployed using previous deployment methods.
 
 
-\paragraph{}Operational duties included a 24/7 support rota for developer tooling such as GitlabCI, ELK, JIRA, Crucible etc in addition to supporting developers in debugging issues with their applications on the Kubernetes cluster. Promoted a culture of learning within my team through written case studies which clearly show the thinking behind the resolution, and through pairing during incidents. Started additional training initiatives within my department through info-dump sessions for multiple where we discuss a specific technical topic in a question and answer format.
+\paragraph{}Operational duties included a 24/7 support rota for developer tooling such as GitlabCI, ELK, JIRA, Crucible etc in addition to supporting developers in debugging issues with their applications on the Kubernetes clusters. Promoted a culture of learning within my team through written case studies which clearly show the thinking behind the resolution, and through pairing during incidents. Started additional training initiatives within my department through info-dump sessions where we discuss a specific technical topic in a question and answer format.
 
-\paragraph{}I have been a key member in the Monitoring and Alerting working group for the infrastructure department which aims to have a more coordinated approach to monitoring across several teams. Facilitated and organised meetings, offered my own technical experience and advice on effective use of Prometheus, Grafana and Kubernetes, organised lab days to get people motivated and focussed on completing the technical work required to bring their team up to speed. 
+\paragraph{}Attended the Monitoring and Alerting working group on behalf of my team for the infrastructure department which aims to have a more coordinated approach to monitoring across several teams. Facilitated and organised meetings, offered my own technical experience and advice on effective use of Prometheus, Grafana and Kubernetes, organised lab days to get people motivated and focussed on completing the technical work required to bring their team up to speed. 
 
-\paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Pushed for a culture of continuous learning 
-
-\paragraph{} Publicly presented my work at meetups, conferences and for internal training sessions. I enjoy public speaking and love to share my story and experience with technology and hear from others in order to figure out what is the best, or close to the best approach to different problems.\\[10pt]
+\paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Publicly presented my work at meetups, conferences and for internal training sessions.\\[10pt]
 
 \textbf{Software Engineer}\\
 \textit{Cambridge Consultants, September 2015 to February 2017}\\[5pt]
