finishing touches, a lot of sentence cutting to OT

--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -20,39 +20,36 @@ right  = 1in]{geometry}
 
 \pagenumbering{gobble}
 \begin{document}    
-\begin{flushright}
+\begin{flushleft}
 
-\begin{tabular}{ll}
+\begin{tabular}{@{}ll@{}}
    \multicolumn{2}{l}{}\\
-   \Huge \color{MyRed}Charlotte Godley &
+   \Huge \color{MyRed}Charlotte Godley \large{BSc(Hons) MBCS MIET} &
 	\begin{tabular}{ll}
 		\multirow{charlottegodley.co.uk}\\
 			me@charlottegodley.co.uk\\
 
 	\end{tabular}
 \end{tabular}
-\end{flushright}
+\end{flushleft}
 
 \section*{Experience}
 \begin{flushleft}
 \textbf{Platform Engineer}\\
 \textit{Ocado Technology, February 2017 to present}\\[5pt]
-Responsible for the Ocado Technology developer platform, a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. Development work involved producing and improving continuous integration and delivery scripts written in Python running in GitlabCI, in particular refactoring our bash scripts which interact with Kubernetes, OpenStack and Ceph APIs into Python due to rising complexity. Implemented and emphasised the need for a test driven approach to deployment process scripts to improve feedback loops whilst avoiding interfering with developer workflows, wrote clear but concise documentation to compliment this process. Dog-fooded the approach during this time having maintained and improved Django applications which use the CI/CD pipeline and having deployed using previous deployment methods.
+Responsible for the Ocado Technology developer platform, a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. Development work involved producing and improving continuous integration and delivery scripts. Implemented and evangelised a test driven approach to deployment process scripts to speed up feedback loops therefore improving developer productivity. Wrote clear and concise documentation. "Ate own dogfood" by using the CI/CD pipelines during development of Django/Python applications.
 
+\paragraph{}Operational duties included supporting developers in debugging issues with their applications on the Kubernetes clusters. Promoted a culture of learning within my team through written case studies which clearly show the thinking behind the resolution, and through pairing during incidents. Started additional training initiatives within my department through info-dump sessions where we discussed a specific technical topic in a question and answer format.
 
-\paragraph{}Operational duties included a 24/7 support rota for developer tooling such as GitlabCI, ELK, JIRA, Crucible etc in addition to supporting developers in debugging issues with their applications on the Kubernetes clusters. Promoted a culture of learning within my team through written case studies which clearly show the thinking behind the resolution, and through pairing during incidents. Started additional training initiatives within my department through info-dump sessions where we discuss a specific technical topic in a question and answer format.
+\paragraph{}Key member of the Monitoring and Alerting working group on behalf of my team for the infrastructure department which aims to have a more coordinated approach to monitoring across several teams. Lead meetings, offered my own technical experience and advice on effective use of Prometheus, Grafana and Kubernetes. Lead internal monitoring hackathons.
 
-\paragraph{}Attended the Monitoring and Alerting working group on behalf of my team for the infrastructure department which aims to have a more coordinated approach to monitoring across several teams. Facilitated and organised meetings, offered my own technical experience and advice on effective use of Prometheus, Grafana and Kubernetes, organised lab days to get people motivated and focussed on completing the technical work required to bring their team up to speed. 
-
-\paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Publicly presented my work at meetups, conferences and for internal training sessions.\\[10pt]
+\paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Publicly presented my work at Kubernetes London, London Python, Cambridge Python User Group and DevOps Days Edinburgh, in addition to internal training sessions.\\[10pt]
 
 \textbf{Software Engineer}\\
 \textit{Cambridge Consultants, September 2015 to February 2017}\\[5pt]
-Cambridge Consultants are a product development and technological consultancy. As a Software Engineer in the ICE (Industrial, Consumer and Energy) department I worked on projects ranging from household devices through to defence systems.
+Cambridge Consultants are a product development and technological consultancy. Worked on multidisciplinary teams with projects ranging from household devices through to defence systems primarily in embedded and web systems. One such project was a HTML5 web app for a touch interface to showcase Cambridge Consultants' capabilities to prospective clients. Angular.js was the client-side MVC framework and D3.js to display graphs and charts with a Node.js backend. The integration of D3 and Angular was a particularly interesting piece of work, which required working with legacy D3 code written for an earlier iteration of the product in order to get it to play nice with Angular. As well as being shown to clients the application is displayed in the main office, so all visitors see the project.
 
-\paragraph{}During my time at Cambridge Consultants I worked, primarily, in embedded and web systems. One of the web projects on which I took on a product owner role, as well as development duties, was an HTML5 web app for a touch interface to showcase Cambridge Consultants' capabilities to prospective clients. I used Angular.js as a client-side MVC framework and D3.js to display graphs and charts. The integration of D3 and Angular was a particularly interesting piece of work, which required working with legacy D3 code written for an earlier iteration of the product in order to get it to play nice with Angular. As well as being shown to clients the application is displayed in the main office, so all visitors see the project.
-
-\paragraph{}Due to the sensitive nature of many of the clients of Cambridge Consultants, I am unable to talk in detail about the work I undertook in the embedded space. However, I can say that my embedded work ranged from developing robust and resilient drivers through to programming state machines and applications for real time operating systems. More recently alongside my engineering role I have taken on additional responsibilities around project management including soliciting requirements from clients, delegation of engineering tasks and facilitating collaboration with other teams.\\[10pt]
+\paragraph{}Embedded work ranged from developing robust and resilient drivers through to programming state machines and applications for real time operating systems. Took on additional responsibilities around project management including soliciting requirements from clients, delegation of engineering tasks and facilitating collaboration with other teams.\\[10pt]
 
 \textbf{Freelance technical writer}\\
 \textit{July 2014 to July 2015}\\[5pt]
@@ -86,7 +83,7 @@ As part of my degree I completed an industrial placement at Airbus, the largest 
 \item Winner of the \textbf{G.B Cooke Prize} for \textbf{Best Final Year Project} at \textbf{The University of Hull}\\
 \small Recipient of the award for best final year project in a year group of 150 students, due to an average percent score of 93 for the dissertation portion of my degree. 
 \item Winner of the \textbf{Bristol Heat of the Institute of Engineering and Technology Present Around the World Competition} \\
-\small Present Around the World is a competition for 18-25 year olds to present on a technical topic for 10 minutes. I presented a talk about improving Computing education with a particular slant towards using creative technologies to improve inclusion and interest.
+\small A competition for 18-25 year olds to present on a technical topic for 10 minutes. Presented a talk about improving Computing education with a particular slant towards using creative technologies to improve inclusion and interest.
 \item \normalsize Winner of the \textbf{British Computer Society's Lovelace Colloquium}, Best Second Year \textbf{Poster Award}
 \item Winner of a travel scholarship for the \textbf{Grace Hopper Celebration of Women in Computing 2014}\\
  \small One of 425 recipients of a total applicant pool of 1,400 to receive full travel,  accommodation and entry financial aid to attend the conference in \textbf{Phoenix, Arizona}, through personal merit and support of STEM education improvement in the UK.
