rewrite voice for other sections

--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -31,37 +31,35 @@ right  = 1in]{geometry}
 
 	\end{tabular}
 \end{tabular}
-\end{flushleft}
 
 \section*{Experience}
-\begin{flushleft}
 \textbf{Platform Engineer}\\
 \textit{Ocado Technology, February 2017 to present}\\[5pt]
-Responsible for the Ocado Technology developer platform, a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. Development work involved producing and improving continuous integration and delivery scripts. Implemented and evangelised a test driven approach to deployment process scripts to speed up feedback loops therefore improving developer productivity. Wrote clear and concise documentation. "Ate own dogfood" by using the CI/CD pipelines during development of Django/Python applications.
+Responsible for the Ocado Technology developer platform, a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. Development work involved producing and improving continuous integration and delivery scripts. Implemented and evangelised a test driven approach to deployment process scripts to speed up feedback loops, therefore improving developer productivity. Wrote clear and concise documentation. "Ate own dogfood" by using the CI/CD pipelines during development of Django/Python applications.
 
-\paragraph{}Operational duties included supporting developers in debugging issues with their applications on the Kubernetes clusters. Promoted a culture of learning within my team through written case studies which clearly show the thinking behind the resolution, and through pairing during incidents. Started additional training initiatives within my department through info-dump sessions where we discussed a specific technical topic in a question and answer format.
+\paragraph{}Operational duties included supporting developers in debugging issues with their applications on the Kubernetes clusters. Promoted a culture of learning within my team through written case studies which clearly showed the thinking behind the resolution, and through pairing during incidents. Started additional training initiatives within my department through info-dump sessions where we discussed a specific technical topic in a question and answer format.
 
-\paragraph{}Key member of the Monitoring and Alerting working group on behalf of my team for the infrastructure department which aims to have a more coordinated approach to monitoring across several teams. Lead meetings, offered my own technical experience and advice on effective use of Prometheus, Grafana and Kubernetes. Lead internal monitoring hackathons.
+\paragraph{}Key member of the Monitoring and Alerting working group on behalf of my team for the infrastructure department, which aims to have a more coordinated approach to monitoring across several teams. Lead meetings, offered my own technical experience and advice on effective use of Prometheus, Grafana and Kubernetes. Lead internal monitoring hackathons.
 
 \paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Publicly presented my work at Kubernetes London, London Python, Cambridge Python User Group and DevOps Days Edinburgh, in addition to internal training sessions.\\[10pt]
 
 \textbf{Software Engineer}\\
 \textit{Cambridge Consultants, September 2015 to February 2017}\\[5pt]
-Cambridge Consultants are a product development and technological consultancy. Worked on multidisciplinary teams with projects ranging from household devices through to defence systems primarily in embedded and web systems. One such project was a HTML5 web app for a touch interface to showcase Cambridge Consultants' capabilities to prospective clients. Angular.js was the client-side MVC framework and D3.js to display graphs and charts with a Node.js backend. The integration of D3 and Angular was a particularly interesting piece of work, which required working with legacy D3 code written for an earlier iteration of the product in order to get it to play nice with Angular. As well as being shown to clients the application is displayed in the main office, so all visitors see the project.
+Cambridge Consultants are a product development and technological consultancy. Worked on multidisciplinary teams with projects ranging from household devices through to defence systems primarily in embedded and web systems. One such project was a HTML5 web app for a touch interface to showcase Cambridge Consultants' capabilities to prospective clients. Angular.js was the client-side MVC framework and D3.js was used to display graphs and charts with a Node.js backend. The integration of D3 and Angular was a particularly interesting piece of work, which required working with legacy D3 code written for an earlier iteration of the product in order to get it to play nice with Angular. As well as being shown to clients the application is displayed in the main office, so all visitors see the project.
 
 \paragraph{}Embedded work ranged from developing robust and resilient drivers through to programming state machines and applications for real time operating systems. Took on additional responsibilities around project management including soliciting requirements from clients, delegation of engineering tasks and facilitating collaboration with other teams.\\[10pt]
 
 \textbf{Freelance technical writer}\\
 \textit{July 2014 to July 2015}\\[5pt]
-Alongside my final year studies I was contracted to author blog posts, write tutorials and present in informational videos by Premier Farnell, the leading electronics distributor in the UK. The content was primarily aimed at electronics hobbyists and the video series, Circuits with Charlotte, received a total of over 85,000 views on Premier Farnell's YouTube Channel.
+Contracted to author blog posts, write tutorials and present in informational videos by Premier Farnell, the leading electronics distributor in the UK during the final year of my degree. The content was primarily aimed at electronics hobbyists and the video series, Circuits with Charlotte, received a total of over 85,000 views on Premier Farnell's YouTube Channel.
 
-\paragraph{}Developing the content helped me to develop my communication skills, enabling me to discuss highly technical subjects with people of varying skill levels; from beginners through to advanced users. Each project, which consisted of a tutorial and a video, took users from the basics of electronics through to having a working system.
+\paragraph{}This work developed my communication skills, enabling me to discuss highly technical subjects with people of varying skill levels; from beginners through to advanced users. Each project, which consisted of a tutorial and a video, took users from the basics of electronics through to having a working system.
 
 \paragraph{}Projects included creating a \textbf{NFC enabled microcomputer} with a \textbf{Windows Azure ASP.NET backend} to allow people to check in using oystercards at events, and creating a bracelet of LEDs which could be given a custom colour and pattern using an android phone app. \\[10pt]
 
 \textbf{EAT Intern}\\
 \textit{Airbus Operations, August 2013 - July 2014}\\[5pt]
-As part of my degree I completed an industrial placement at Airbus, the largest plane manufacturer in Europe. 
+Completed an industrial placement as part of my university sandwich course. Placement was with Airbus, the largest plane manufacturer in Europe. 
 
 \begin{itemize}
 \item Maintained a python toolkit called EAT (Engineering Application Toolkit) which interfaced with the CAD modelling engine CATIA
