--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -26,16 +26,20 @@ right  = 1in]{geometry}
    \multicolumn{2}{l}{}\\
    \Huge \color{MyRed}Charlotte Godley \large{BSc(Hons) MBCS MIET} &
 	\begin{tabular}{ll}
-		\multirow{charlottegodley.co.uk}\\
-			me@charlottegodley.co.uk\\
+		charlottegodley.co.uk\\
+		me@charlottegodley.co.uk\\
 
 	\end{tabular}
 \end{tabular}
 
 \section*{Experience}
+\textbf{Senior Software Engineer}\\
+\textit{Subtree Inc, June 2018 to present}\\[5pt]
+Designed and built the data science versioning product \textit{Dotscience}, focussing on backend and infrastructure.\\[10pt]
+
 \textbf{Platform Engineer}\\
-\textit{Ocado Technology, February 2017 to present}\\[5pt]
-Responsible for the Ocado Technology developer platform, a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. Development work involved producing and improving continuous integration and delivery scripts. Implemented and evangelised a test driven approach to deployment process scripts to speed up feedback loops, therefore improving developer productivity. Wrote clear and concise documentation. "Ate own dogfood" by using the CI/CD pipelines during development of Django/Python applications.
+\textit{Ocado Technology, February 2017 to June 2018}\\[5pt]
+Responsible for the Ocado Technology developer platform, a Kubernetes cluster on top of OpenStack infrastructure in each of their generation 2.0 automated warehouses. Development work involved producing and improving continuous integration and delivery scripts. Implemented and evangelised a test driven approach to deployment process scripts to speed up feedback loops, therefore improving developer productivity. Wrote clear and concise documentation. "Ate own dog food" by using the CI/CD pipelines during development of Django/Python applications.
 
 \paragraph{}Operational duties included supporting developers in debugging issues with their applications on the Kubernetes clusters. Promoted a culture of learning within my team through written case studies which clearly showed the thinking behind the resolution, and through pairing during incidents. Started additional training initiatives within my department through info-dump sessions where we discussed a specific technical topic in a question and answer format.
 
@@ -59,14 +63,7 @@ Contracted to author blog posts, write tutorials and present in informational vi
 
 \textbf{EAT Intern}\\
 \textit{Airbus Operations, August 2013 - July 2014}\\[5pt]
-Completed an industrial placement as part of my university sandwich course. Placement was with Airbus, the largest plane manufacturer in Europe. 
-
-\begin{itemize}
-\item Maintained a python toolkit called EAT (Engineering Application Toolkit) which interfaced with the CAD modelling engine CATIA
-\item Toolkit reduced Aerospace Engineers reliance on the CATIA UI without needing to use the complex C++ API directly, enabling non-software engineers to write their own tools.
-\item Built and improved applications using the toolkit, varying from stress calculations to fuel systems modelling	
-\item Trained replacement interns and helped support work experience students
-\end{itemize}
+Completed an industrial placement as part of my university sandwich course. Placement was with Airbus, the largest plane manufacturer in Europe. Maintained a python toolkit called EAT (Engineering Application Toolkit) which interfaced with the CAD modelling engine CATIA. Toolkit reduced Aerospace Engineers reliance on the CATIA UI without needing to use the complex C++ API directly, enabling non-software engineers to write their own tools. Built and improved applications using the toolkit, varying from stress calculations to fuel systems modelling. Trained replacement interns and helped support work experience students.
 
 \section*{Education}
 \begin{tabular}{@{}ll@{}}
@@ -93,9 +90,9 @@ Completed an industrial placement as part of my university sandwich course. Plac
 \begin{itemize}
 \item \textbf{Musician with grade 8 in Clarinet, grade 5 in Piano and grade 3 in Saxophone}. Music has greatly influenced my ability to work with others, memory skills and logical thinking. I regularly attend bands and orchestras to keep these skills sharpened and as a form of relaxation. This also influenced my \textit{Final Year Project} during my BSc, which was a \textbf{sheet music organisation system}, in order to make it easier for classical musicians to browse their own libraries and collate it with online resources. 
 
-\item \textbf{STEM Ambassador}. I volunteer as a STEM Ambassador in order to improve computer science education. Previously I have ran workshops using wearables in order to teach programming concepts in a more creative and inclusive way, supported teachers with resources and given talks on computing education at meetups. More recently I have been actively involved in mentoring young people to take part in PiWars, a Raspberry Pi robot building competition hosted in Cambridge, UK every year.
+\item \textbf{STEM Ambassador}. I volunteer as a STEM Ambassador in order to improve computer science education. Previously I have ran workshops using wearables in order to teach programming concepts in a more creative and inclusive way, supported teachers with resources and given talks on computing education at meetups. More recently I have been actively involved in mentoring young people to take part in PiWars, a Raspberry Pi robot building competition hosted in Cambridge, UK every year.\\[15pt]
 \end{itemize}
-\end{flushleft}\\[15pt]
+\end{flushleft}
 
 \textbf{\textit{References available upon request}}
 \end{document}
