--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -35,7 +35,9 @@ right  = 1in]{geometry}
 \section*{Experience}
 \textbf{Senior Software Engineer}\\
 \textit{Subtree Inc, June 2018 to present}\\[5pt]
-Designed and built the data science versioning product \textit{Dotscience}, focussing on backend and infrastructure.\\[10pt]
+Instrumental in the pivot from \textit{Dotmesh} to \textit{Dotscience}, a product which brings software engineering and DevOps best practices to data scientists through automation. Worked on all elements of the stack from React frontend on the dashboard to backend work on runners for user workloads.
+
+\paragraph{}Main focus as a software engineer was on backend and infrastructure, using Golang to write APIs, Docker, Kubernetes and GCP for deployment. Wrote storage integration to S3 in order to enable customers to bring in data in from other sources. Rewrote prototyped elements of the system from Python to Golang whilst adjusting those elements to new specification requirements. Introduced monitoring using Prometheus and Alertmanager, supported customers using the product and introduced a support rota. Introduced pull requests to increase code quality and maintainability, continuous delivery best practices and wrote pipeline automation code and configuration using Drone and Gitlab CI. Recruited and hired other engineers, and advised on hiring practices.\\[10pt]
 
 \textbf{Platform Engineer}\\
 \textit{Ocado Technology, February 2017 to June 2018}\\[5pt]
@@ -43,9 +45,9 @@ Responsible for the Ocado Technology developer platform, a Kubernetes cluster on
 
 \paragraph{}Operational duties included supporting developers in debugging issues with their applications on the Kubernetes clusters. Promoted a culture of learning within my team through written case studies which clearly showed the thinking behind the resolution, and through pairing during incidents. Started additional training initiatives within my department through info-dump sessions where we discussed a specific technical topic in a question and answer format.
 
-\paragraph{}Key member of the Monitoring and Alerting working group on behalf of my team for the infrastructure department, which aims to have a more coordinated approach to monitoring across several teams. Lead meetings, offered my own technical experience and advice on effective use of Prometheus, Grafana and Kubernetes. Lead internal monitoring hackathons.
+\paragraph{}Key member of the Monitoring and Alerting working group on behalf of my team for the infrastructure department, which aimed to have a more coordinated approach to monitoring across several teams. Lead meetings, offered my own technical experience and advice on effective use of Prometheus, Grafana and Kubernetes. Lead internal monitoring hackathons.
 
-\paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Publicly presented my work at Kubernetes London, London Python, Cambridge Python User Group and DevOps Days Edinburgh, in addition to internal training sessions.\\[10pt]
+\paragraph{}Extensive time spent running technical interviews, constantly working to make the process more effective for the organisation and less time consuming and stressful for the candidate. Mentored several other members of the team, sometimes answering questions via slack, other times through pairing particularly around operations work. Publicly presented my work at Kubernetes London, Cloud Native London, London Python, Cambridge Python User Group and DevOps Days Edinburgh, in addition to internal training sessions.\\[10pt]
 
 \textbf{Software Engineer}\\
 \textit{Cambridge Consultants, September 2015 to February 2017}\\[5pt]
