--- a/Charlotte Godley.tex
+++ b/Charlotte Godley.tex
@@ -37,7 +37,9 @@ right  = 1in]{geometry}
 \textit{Subtree Inc, June 2018 to present}\\[5pt]
 Instrumental in the pivot from \textit{Dotmesh} to \textit{Dotscience}, a product which brings software engineering and DevOps best practices to data scientists through automation. Worked on all elements of the stack from React frontend on the dashboard to backend work on runners for user workloads.
 
-\paragraph{}Main focus as a software engineer was on backend and infrastructure, using Golang to write APIs, Docker, Kubernetes and GCP for deployment. Wrote storage integration to S3 in order to enable customers to bring in data in from other sources. Rewrote prototyped elements of the system from Python to Golang whilst adjusting those elements to new specification requirements. Introduced monitoring using Prometheus and Alertmanager, supported customers using the product and introduced a support rota. Introduced pull requests to increase code quality and maintainability, continuous delivery best practices and wrote pipeline automation code and configuration using Drone and Gitlab CI. Recruited and hired other engineers, and advised on hiring practices.\\[10pt]
+\paragraph{}Main focus as a software engineer was on backend and infrastructure, using Golang to write APIs, Docker, Kubernetes and GCP for deployment. Wrote storage integration to S3 in order to enable customers to bring in data in from other sources. Rewrote prototyped elements of the system from Python to Golang whilst adjusting those elements to new specification requirements. Wrote extensive end to end and integration tests which helped identify complex problems before reaching the customer. 
+
+\paragraph{}Introduced monitoring using Prometheus and Alertmanager, supported customers using the product and introduced a support rota. Introduced pull requests to increase code quality and maintainability, continuous delivery best practices and wrote pipeline automation code and configuration using Drone and Gitlab CI. Recruited and hired other engineers, and advised on hiring practices.\\[10pt]
 
 \textbf{Platform Engineer}\\
 \textit{Ocado Technology, February 2017 to June 2018}\\[5pt]
